# YthU

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml
api/llm/: chain.py  prompt.py
api/utils/: model_schema.py
front/: page.py  sidebar.py
pages/: data_processing_page.py  professional_page.py  user_interactive_page.py
ui/front/: sidebar.py
