[tool.poetry]
name = "ythu"
version = "0.1.0"
description = "A platform for the most private healthcare assistant crews."
authors = ["devRestain"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
