[tool.poetry]
name = "ythu"
version = "0.1.0"
description = "A platform for the most private healthcare assistant crews."
authors = ["devRestain"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
faiss-cpu = "^1.8.0.post1"
openai = "^1.42.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
